<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_autostart"
            android:textSize="24sp"
            android:padding="16dp"
            android:id="@+id/tv_autostartstar"/>
        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="16dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/togglebutton_item"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_notifmsg"
            android:textSize="24sp"
            android:padding="16dp"
            android:id="@+id/tv_notifmsg"/>
        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="16dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/togglebutton_item" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_pushmsg"
            android:textSize="24sp"
            android:padding="16dp"
            android:id="@+id/tv_pushmsg"/>
        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="16dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/togglebutton_item" />
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@mipmap/ic_arrows_right"
        android:text="@string/setting_clear"
        android:textSize="24sp"
        android:gravity="center|left"
        android:padding="16dp"
        android:id="@+id/tv_clear"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@mipmap/ic_arrows_right"
        android:text="@string/setting_help"
        android:textSize="24sp"
        android:gravity="center|left"
        android:padding="16dp"
        android:id="@+id/tv_help"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@mipmap/ic_arrows_right"
        android:text="@string/setting_study"
        android:textSize="24sp"
        android:gravity="center|left"
        android:padding="16dp"
        android:id="@+id/tv_study"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@mipmap/ic_arrows_right"
        android:text="@string/setting_share"
        android:textSize="24sp"
        android:gravity="center|left"
        android:padding="16dp"
        android:id="@+id/tv_share"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@mipmap/ic_arrows_right"
        android:text="@string/setting_update"
        android:textSize="24sp"
        android:gravity="center|left"
        android:padding="16dp"
        android:id="@+id/tv_update"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@mipmap/ic_arrows_right"
        android:text="@string/setting_about"
        android:textSize="24sp"
        android:gravity="center|left"
        android:padding="16dp"
        android:id="@+id/tv_about"/>

</LinearLayout>