<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.administrator.housekeeperapplication.ui.SoftMgrActivity">
    <include layout="@layout/layout_toolbar"/>
    <include layout="@layout/layout_phone_space_info"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:textSize="20sp"
            android:layout_marginTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/space_phone"/>
        <ProgressBar
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pb_phone_internal_space"
            style="@android:style/Widget.ProgressBar.Horizontal"/>
        <TextView
            android:textSize="20sp"
            android:layout_marginTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="100M/1000M"
            android:id="@+id/tv_internal"/>
        <TextView
            android:textSize="20sp"
            android:layout_marginTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/out_space_phone"/>
        <ProgressBar
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pb_phone_extral_space"
            style="@android:style/Widget.ProgressBar.Horizontal"/>
        <TextView
            android:textSize="20sp"
            android:layout_marginTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="100M/1000M"
            android:id="@+id/tv_extral"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/all_soft"
                android:gravity="left|center_vertical"
                style="@style/MainButton"
                android:id="@+id/btn_all_soft"
                android:drawableRight="@mipmap/ic_arrows_right"/>
            <Button
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/utility_soft"
                android:gravity="left|center_vertical"
                style="@style/MainButton"
                android:id="@+id/btn_uti_soft"
                android:drawableRight="@mipmap/ic_arrows_right"/>
            <Button
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/system_soft"
                android:gravity="left|center_vertical"
                style="@style/MainButton"
                android:id="@+id/btn_sys_soft"
                android:drawableRight="@mipmap/ic_arrows_right"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
